--- a/MapleStoryLogin/MapleStoryLogin.csproj
+++ b/MapleStoryLogin/MapleStoryLogin.csproj
@@ -8,4 +8,9 @@
     <Win32Resource />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>x86</PlatformTarget>
+  </PropertyGroup>
+
 </Project>
