修改發布設定

--- a/MapleStoryLogin/MapleStoryLogin.csproj
+++ b/MapleStoryLogin/MapleStoryLogin.csproj
@@ -8,6 +8,10 @@
     <Win32Resource />
     <Authors>PJ Yu</Authors>
     <SignAssembly>false</SignAssembly>
+	<PublishTrimmed>true</PublishTrimmed>
+	<PublishReadyToRun>true</PublishReadyToRun>
+    <PublishSingleFile>true</PublishSingleFile>
+	<RuntimeIdentifier>win-x86</RuntimeIdentifier>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
